crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__generator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/generator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            21,
        ),
        range: 0..36,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        9,
                    ),
                    range: 0..15,
                    value: Generator(
                        ExprGenerator {
                            node_index: NodeIndex(
                                8,
                            ),
                            range: 0..15,
                            elt: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(
                                        2,
                                    ),
                                    range: 1..3,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                1,
                                            ),
                                            range: 2..3,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 4..14,
                                    node_index: NodeIndex(
                                        7,
                                    ),
                                    target: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                4,
                                            ),
                                            range: 8..9,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                6,
                                            ),
                                            range: 13..14,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        15,
                    ),
                    range: 16..24,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(
                                14,
                            ),
                            range: 16..24,
                            elts: [
                                Named(
                                    ExprNamed {
                                        node_index: NodeIndex(
                                            13,
                                        ),
                                        range: 17..23,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    11,
                                                ),
                                                range: 17..18,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(
                                                    12,
                                                ),
                                                range: 22..23,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            For(
                StmtFor {
                    node_index: NodeIndex(
                        20,
                    ),
                    range: 25..35,
                    is_async: false,
                    target: Name(
                        ExprName {
                            node_index: NodeIndex(
                                17,
                            ),
                            range: 29..30,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        ExprName {
                            node_index: NodeIndex(
                                19,
                            ),
                            range: 34..35,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                    body: [],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | (*x for x in y)
  |  ^^ Syntax Error: Iterable unpacking cannot be used in a comprehension
2 | (x := 1, for x in y)
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |          ^^^ Syntax Error: Expected ')', found 'for'
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |                    ^ Syntax Error: Expected ':', found ')'
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |                     ^ Syntax Error: Expected a statement
  |
